--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "client": "file:",
+    "glob": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "rimraf": "^6.0.1",
+    "svgo": "^3.3.2",
+    "web-vitals": "^2.1.4",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
