--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-async-generator-functions": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.20.0",
+    "@babel/plugin-transform-dynamic-import": "^7.20.0",
+    "@babel/plugin-transform-json-strings": "^7.20.0",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.20.0",
+    "@babel/plugin-transform-numeric-separator": "^7.20.0",
+    "@babel/plugin-transform-object-rest-spread": "^7.20.0",
+    "@babel/plugin-transform-optional-catch-binding": "^7.20.0",
+    "@babel/plugin-transform-optional-chaining": "^7.20.0",
+    "@babel/plugin-transform-unicode-property-regex": "^7.20.0",
     "@stripe/stripe-js": "^4.9.0",
+    "@svgr/plugin-svgo": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "client": "file:",
-    "glob": "^11.0.0",
+    "glob": "^9.3.5",
+    "joi": "^17.13.3",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
-    "rimraf": "^6.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "rimraf": "^4.4.1",
     "svgo": "^3.3.2",
+    "uuid": "^7.0.3",
     "web-vitals": "^2.1.4",
     "workbox-webpack-plugin": "^7.3.0"
   },
@@ -45,5 +60,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "eslint-webpack-plugin": "^4.2.0"
+  }
 }
