--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "install-client": "cd client && yarn install",
     "install-server": "cd server && yarn install",
     "build-client": "cd client && yarn build",
+    "start-client": "cd client && yarn start",
     "start-server": "cd server && yarn start",
-    "start": "npm run install-client && npm run install-server && npm run build-client && npm run start-server"
+    "start": "concurrently \"npm run install-client\" \"npm run install-server\" \"npm run build-client\" \"npm run start-server\""
+  },
+  "dependencies": {
+    "concurrently": "^7.0.0",
+    "ecommerce-mern-root": "file:"
   }
 }
