--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-client": "cd client && yarn build",
     "start-client": "cd client && yarn start",
     "start-server": "cd server && yarn start",
-    "start": "concurrently \"npm run install-client\" \"npm run install-server\" \"npm run build-client\" \"npm run start-server\""
+    "start": "concurrently \"cd server && yarn start\" \"cd client && yarn start\""
   },
   "dependencies": {
     "concurrently": "^7.0.0",
