--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
-  "name": "server",
+  "name": "ecommerce-mern-root",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "install-client": "cd client && yarn install",
+    "install-server": "cd server && yarn install",
+    "build-client": "cd client && yarn build",
+    "start": "cd server && yarn start && cd ../client && yarn start"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@stripe/stripe-js": "^4.9.0",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.8.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7",
-    "server": "file:",
-    "stripe": "^17.3.1"
-  },
-  "keywords": [],
-  "description": ""
+    "concurrently": "^9.1.0",
+    "ecommerce-mern-root": "file:"
+  }
 }
