--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "install-client": "cd client && yarn install",
     "install-server": "cd server && yarn install",
-    "build-client": "cd client && yarn build",
+    "build": "cd client && yarn install && yarn build && cd ../server && yarn install",
     "start-server": "cd server && yarn start",
-    "start": "npm run install-client && npm run install-server && npm run build-client && npm run start-server"
+    "start": "cd server && yarn start"
   }
 }
 
