--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "install-server": "cd server && yarn install",
     "build": "cd client && yarn install && yarn build && cd ../server && yarn install",
     "start-server": "cd server && yarn start",
-    "start": "cd server && yarn start"
+    "start": "npm run install-server && npm run start-server"
   }
 }
 
